--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,21 @@
       "next/babel",
       {
         "styled-jsx": {
-          "plugins": ["styled-jsx-plugin-postcss"]
+          "plugins": [
+            ["styled-jsx-plugin-postcss"],
+            ["styled-components", { "ssr": true }]
+          ]
         }
+      }
+    ]
+  ],
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
       }
     ]
   ]
