--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-slick": "^0.28.1",
+    "simplebar-react": "^2.3.6",
     "styled-components": "^5.3.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
@@ -31,6 +33,7 @@
     "@next/bundle-analyzer": "^12.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
+    "@types/react-google-recaptcha": "^2.1.3",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.19",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
